--- a/index.html
+++ b/index.html
@@ -4,62 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e9ecef;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        header {
-            background-color: #007BFF;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin: 20px 0;
-        }
-        .button-container {
-            margin: 10px;
-            text-align: center;
-        }
-        button {
-            background-color: #28a745;
-            color: white;
-            border: none;
-            padding: 15px 20px;
-            font-size: 1.2em;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        .description {
-            margin-top: 5px;
-            font-size: 0.9em;
-            color: #555;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #007BFF;
-            color: white;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -76,7 +21,6 @@
             <div class="button-container">
                 <button onclick="window.location.href='./lab00_LeonardoFSantos/lab00_LeonardoFSantos.html'">Leonardo F. Santos</button>
 	        <div class="description">RA: 11201922343</div>
-
             </div>
             <div class="button-container">
                 <button onclick="window.location.href='./lab00_Felipe/lab00_Felipe.html'">Felipe Quessada Santiago</button>
@@ -84,23 +28,23 @@
             </div>
         </nav>
     </header>
-    <body>
-	<div class="section">
-    		<h2>Pasta de Trabalho</h2>
-    		<p>A Pasta de Trabalho contém os arquivos que você usará para suas atividades.</p>
-    		<div class="button-container">
-        		<a href="pasta_trabalho/index.html" class="button">LOADING</a>
-    		</div>
-	</div>
 
-	<div class="section">
-    		<h2>Pasta de Relatório</h2>
-    		<p>A Pasta de Relatório contém documentos e informações importantes para sua revisão.</p>
-    		<div class="button-container">
-        		<a href="pasta_relatorio/index.html" class="button">Relatório 1</a>
-    		</div>
-	</div>
-    </body>
+    <div class="section">
+        <h2>Pasta de Trabalho</h2>
+        <p>A Pasta de Trabalho contém os arquivos que você usará para suas atividades.</p>
+        <div class="button-container">
+            <a href="pasta_trabalho/index.html" class="button">LOADING</a>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>Pasta de Relatório</h2>
+        <p>A Pasta de Relatório contém documentos e informações importantes para sua revisão.</p>
+        <div class="button-container">
+            <a href="pasta_relatorio/index.html" class="button">Relatório 1</a>
+        </div>
+    </div>
+
     <footer>
         UFABC 2024
     </footer>
