--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div class="button-container">
             <a href="pasta_relatorio/index.html" class="button">Relatório 1</a>
         </div>
+	<div class="button-container">
+            <a href="Relatorio2/index.html" class="button">Relatório 2</a>
+        </div>
     </div>
 
     <footer>
