--- a/Relatorio2/index.html
+++ b/Relatorio2/index.html
@@ -45,35 +45,32 @@
             <h3>4.1 Resultados das Filtragens (Parte 1)</h3>
             <p>Abaixo estão os resultados das filtragens aplicadas à imagem original com diferentes tamanhos de kernel. Cada imagem foi salva no formato .jpg.</p>
 
-            <!-- Espaços reservados para as imagens da parte 1 -->
             <div class="image-grid">
                 <figure>
-                    <img src="img_original.jpg" alt="Imagem original">
+                    <img src="gupo_triangulo.jpg" alt="Imagem original">
                     <figcaption>Imagem Original</figcaption>
                 </figure>
                 <figure>
-                    <img src="img_blur_3x3.jpg" alt="Blur 3x3">
+                    <img src="Homogeneous_Blur_3x3.jpg" alt="Blur 3x3">
                     <figcaption>Filtro Blur 3x3</figcaption>
                 </figure>
                 <figure>
-                    <img src="img_gaussian_3x3.jpg" alt="Gaussian 3x3">
+                    <img src="Gaussian_Blur_3x3.jpg" alt="Gaussian 3x3">
                     <figcaption>Filtro Gaussian 3x3</figcaption>
                 </figure>
                 <figure>
-                    <img src="img_median_3x3.jpg" alt="Median 3x3">
+                    <img src="Median_Blur_3x3.jpg" alt="Median 3x3">
                     <figcaption>Filtro Median 3x3</figcaption>
                 </figure>
                 <figure>
-                    <img src="img_bilateral_3x3.jpg" alt="Bilateral 3x3">
+                    <img src="Bilateral_Blur_3x3.jpg" alt="Bilateral 3x3">
                     <figcaption>Filtro Bilateral 3x3</figcaption>
                 </figure>
-                <!-- Adicione mais imagens conforme necessário -->
             </div>
 
             <h3>4.2 Resultados com Ruído Sal-e-Pimenta (Parte 2)</h3>
             <p>A seguir, apresentamos as imagens resultantes após a aplicação de ruído "sal-e-pimenta" e filtragem com diferentes kernels.</p>
 
-            <!-- Espaços reservados para as imagens da parte 2 -->
             <div class="image-grid">
                 <figure>
                     <img src="img_noise.jpg" alt="Imagem com Ruído">
@@ -87,7 +84,6 @@
                     <img src="img_gaussian_noise.jpg" alt="Gaussian com Ruído">
                     <figcaption>Filtro Gaussian com Ruído</figcaption>
                 </figure>
-                <!-- Adicione mais imagens conforme necessário -->
             </div>
 
             <h3>4.3 Filtragem em Tempo Real (Parte 3)</h3>
