--- a/Relatorio2/index.html
+++ b/Relatorio2/index.html
@@ -47,7 +47,7 @@
 
             <div class="image-grid">
                 <figure>
-                    <img src="gupo_triangulo.jpg" alt="Imagem original">
+                    <img src="gupo_triangulo.jpeg" alt="Imagem original">
                     <figcaption>Imagem Original</figcaption>
                 </figure>
                 <figure>
@@ -73,15 +73,15 @@
 
             <div class="image-grid">
                 <figure>
-                    <img src="img_noise.jpg" alt="Imagem com Ruído">
+                    <img src="inoisy_image.jpg" alt="Imagem com Ruído">
                     <figcaption>Imagem com Ruído Sal-e-Pimenta</figcaption>
                 </figure>
                 <figure>
-                    <img src="img_blur_noise.jpg" alt="Blur com Ruído">
+                    <img src="homogeneous_blur.jpg" alt="Blur com Ruído">
                     <figcaption>Filtro Blur com Ruído</figcaption>
                 </figure>
                 <figure>
-                    <img src="img_gaussian_noise.jpg" alt="Gaussian com Ruído">
+                    <img src="gaussian_blur.jpg" alt="Gaussian com Ruído">
                     <figcaption>Filtro Gaussian com Ruído</figcaption>
                 </figure>
             </div>
