--- a/Relatorio2/index.html
+++ b/Relatorio2/index.html
@@ -47,7 +47,7 @@
 
             <div class="image-grid">
                 <figure>
-                    <img src="gupo_triangulo.jpeg" alt="Imagem original">
+                    <img src="grupo_triangulo.jpeg" alt="Imagem original">
                     <figcaption>Imagem Original</figcaption>
                 </figure>
                 <figure>
@@ -73,7 +73,7 @@
 
             <div class="image-grid">
                 <figure>
-                    <img src="inoisy_image.jpg" alt="Imagem com Ruído">
+                    <img src="noisy_image.jpg" alt="Imagem com Ruído">
                     <figcaption>Imagem com Ruído Sal-e-Pimenta</figcaption>
                 </figure>
                 <figure>
